--- a/package.json
+++ b/package.json
@@ -1,46 +1,31 @@
 {
-  "name": "better-chatgpt",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
+  "name": "chatgptunblocked",
+  "version": "0.0.1",
+  "description": "",
+  "main": "client/index.html",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "start": "node server.js"
   },
   "dependencies": {
-    "@dqbd/tiktoken": "^1.0.2",
-    "html2canvas": "^1.4.1",
-    "i18next": "^22.4.11",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "^2.1.1",
-    "jspdf": "^2.5.1",
-    "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^12.2.0",
-    "react-markdown": "^8.0.5",
-    "react-scroll-to-bottom": "^4.2.0",
-    "rehype-highlight": "^6.0.0",
-    "rehype-katex": "^6.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
-    "uuid": "^9.0.0",
-    "zustand": "^4.3.6"
+    "express": "4.18.2",
+    "ws": "^8.13.0",
+    "uuid": "9.0.0",
+    "file-system": "2.2.2",
+    "xmlhttprequest": "1.8.0",
+    "uuid4": "2.0.3",
+    "request": "2.88.2",
+    "node-fetch": "^3.3.1"
   },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@types/react-scroll-to-bottom": "^4.2.0",
-    "@types/uuid": "^9.0.1",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vite-plugin-top-level-await": "^1.3.0",
-    "vite-plugin-wasm": "^3.2.2"
-  }
+  "engines": {
+    "node": "12.x"
+  },
+  "repository": {
+    "url": "https://glitch.com/edit/#!/express-template--"
+  },
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "glitch",
+    "express"
+  ]
 }
