--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,15 +40,17 @@ jobs:
         run: yarn make
 
   build_on_win:
-    - uses: actions/checkout@v3
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
 
-    - name: Use Node.js 18
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+      - name: Use Node.js 18
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-    - name: Install dependencies
-      run: yarn
+      - name: Install dependencies
+        run: yarn
 
-    - name: Build
-      run: yarn make
+      - name: Build
+        run: yarn make
