--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
-      - name: Install app dependencies and build web
-        run: yarn install && yarn build
+      - name: Install app dependencies
+        run: yarn install
 
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
