--- a/.github/workflows/testwinbuild.yml
+++ b/.github/workflows/testwinbuild.yml
@@ -1,4 +1,4 @@
-name: Build and publish desktop app
+name: Test Windows Build
 on:
   workflow_dispatch:
 
@@ -45,7 +45,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
