--- a/.github/workflows/testwinbuild.yml
+++ b/.github/workflows/testwinbuild.yml
@@ -54,7 +54,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
         with:
-          tag_name: ${{ github.sha }}
+          tag_name: ${{ github.ref_name }}
           release_name: Release ${{ github.sha }}
           draft: false
           prerelease: false
