--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,8 +62,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
         with:
-          tag_name: ${{ github.ref_name }}-${{ github.sha }}
-          release_name: Release ${{ github.ref_name }}-${{ github.sha }}
+          tag_name: ${{ github.sha }}-${{ github.run_id }}
+          release_name: Release ${{ github.event.head_commit.message }}
           draft: false
           prerelease: false
 
