--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,53 +60,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: release-${{ runner.os }}
-          path: ./myzip/release.zip
-
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
-        with:
-          tag_name: ${{ github.sha }}-${{ github.run_id }}
-          release_name: Release for commit ${{ github.sha }}.substring(0, 7)
-          draft: false
-          prerelease: false
-
-      - name: Download all workflow run artifacts
-        uses: actions/download-artifact@v2
-
-      - name: Upload Release Asset - Ubuntu
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release-ubuntu-latest/release.zip
-          asset_name: release-ubuntu-latest.zip
-          asset_content_type: application/zip
-
-      - name: Upload Release Asset - MacOS
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release-macos-latest/release.zip
-          asset_name: release-macos-latest.zip
-          asset_content_type: application/zip
-
-      - name: Upload Release Asset - Windows
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release-windows-latest/release.zip
-          asset_name: release-windows-latest.zip
-          asset_content_type: application/zip
+          path: ./release
