--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -72,7 +72,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
         with:
           tag_name: ${{ github.sha }}-${{ github.run_id }}
-          release_name: Automated release for commit ${{ github.sha }}.substring(0, 7)
+          release_name: Release ${{ github.sha }}-${{ github.run_id }}
           draft: false
           prerelease: false
 
