--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -41,7 +41,8 @@ env:
   RESOURCE_GROUP: "development"
   CLUSTER_NAME: "development"
   DEPLOYMENT_MANIFEST_PATH: "deploy/deploy.yaml"
-  
+  VITE_SERVER_API_ENDPOINT: "${{ env.VITE_SERVER_API_ENDPOINT}}"
+  VITE_OPENAI_API_KEY: "${{ secrets.VITE_OPENAI_API_KEY}}"
 jobs:
   buildImage:
     permissions:
@@ -63,7 +64,10 @@ jobs:
       # Builds and pushes an image up to your Azure Container Registry
       - name: Build and push image to ACR
         run: |
-          az acr build --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.RESOURCE_GROUP }} .
+          az acr build 
+          --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }} 
+          --registry ${{ env.AZURE_CONTAINER_REGISTRY }} 
+          -g ${{ env.RESOURCE_GROUP }} .
 
   deploy:
     permissions:
