--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -41,8 +41,7 @@ env:
   RESOURCE_GROUP: "development"
   CLUSTER_NAME: "development"
   DEPLOYMENT_MANIFEST_PATH: "deploy/deploy.yaml"
-  VITE_SERVER_API_ENDPOINT: "${{ env.VITE_SERVER_API_ENDPOINT }}"
-  VITE_OPENAI_API_KEY: "${{ secrets.VITE_OPENAI_API_KEY }}"
+  
 jobs:
   buildImage:
     permissions:
@@ -63,6 +62,9 @@ jobs:
 
       # Builds and pushes an image up to your Azure Container Registry
       - name: Build and push image to ACR
+        env:
+          VITE_SERVER_API_ENDPOINT: "${{ env.VITE_SERVER_API_ENDPOINT }}"
+          VITE_OPENAI_API_KEY: "${{ secrets.VITE_OPENAI_API_KEY }}"
         run: |
           az acr build 
           --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }} 
