--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
     "@heroicons/react": "^2.0.18",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@react-oauth/google": "^0.9.0",
+    "@tabler/icons-react": "^2.20.0",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^5.3.0",
@@ -55,6 +58,7 @@
     "i18next-http-backend": "^2.1.1",
     "jspdf": "^2.5.1",
     "katex": "^0.16.4",
+    "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "papaparse": "^5.4.1",
@@ -62,12 +66,15 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.5",
+    "react-router-dom": "^6.11.2",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "sort-by": "^1.2.0",
     "uuid": "^9.0.0",
     "zustand": "^4.3.6"
   },
