--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
     "description": "Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API!",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#ffffff",
+    "background_color": "#343541",
+    "theme_color": "#343541",
     "icons": [
         {
             "src": "apple-touch-icon.png",
