--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "make": "yarn build && electron-builder"
   },
   "build": {
-    "appId": "better-chatgpt",
-    "productName": "Better ChatGPT",
+    "appId": "0xFAQ",
+    "productName": "0xFAQ",
     "artifactName": "${os}-${name}-${version}-${arch}.${ext}",
     "directories": {
       "output": "release"
@@ -68,8 +68,10 @@
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
+    "react-typewriter-hook": "^1.0.1",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
     "remark-gfm": "^3.0.1",
