--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@react-oauth/google": "^0.9.0",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
     "html2canvas": "^1.4.1",
     "i18next": "^22.4.11",
