--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@react-oauth/google": "^0.9.0",
     "@tabler/icons-react": "^2.20.0",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-syntax-highlighter": "^15.5.7",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
@@ -60,6 +61,7 @@
     "katex": "^0.16.4",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
