--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
     "@react-oauth/google": "^0.9.0",
+    "@vercel/analytics": "^1.0.1",
+    "dotenv": "^16.1.4",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^5.3.0",
