--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@dqbd/tiktoken": "^1.0.2",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
-    "@metamask/sdk": "^0.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@react-oauth/google": "^0.9.0",
     "@tabler/icons-react": "^2.20.0",
@@ -85,6 +84,8 @@
     "remark-math": "^5.1.1",
     "sort-by": "^1.2.0",
     "uuid": "^9.0.0",
+    "viem": "^1.0.2",
+    "wagmi": "^1.1.1",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
@@ -102,7 +103,7 @@
     "electron-builder": "^23.6.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.3",
+    "typescript": "^5.0.4",
     "vite": "^4.1.0",
     "vite-plugin-top-level-await": "^1.3.0",
     "vite-plugin-wasm": "^3.2.2",
